C:/Program Files/Git

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -63,7 +63,18 @@
 
 		<!-- EDIT -->
 		<div id='content-editToDoItem' style="display:none;">
-			<input type='text' id='timepicker-actions-exmpl' />
+			<div>
+				<textarea></textarea>
+				<div>
+					<span>开始时间:</span>
+					<input type='text' id='timepicker-Started' />
+				</div>
+				<div>
+					<span>结束时间:</span>
+					<input type='text' id='timepicker-Deadline' />
+				</div>
+			</div>
+			
 		</div>
 
 
