初步版本完成：基础功能实现

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -74,6 +74,7 @@
 
 				<!-- 测试区 -->
 				<!-- <div class='todoList-li flex-box'>
+					<div class='todoList-li-label' style=""></div>
 					<div class='todoList-li-Left flex-box'>
 						<p class='todoList-CountDown'><b>-6h</b></p>
 					</div>
@@ -101,10 +102,11 @@
 		<!-- EDIT -->
 		<div id='content-editToDoItem' class='flex-box' style="display:none;">
 			<div class='center-content'>
-				<div>
+				<!-- 不需要用户创建开始时间，开始时间，默认为当日 -->
+				<!-- <div>
 					<p>Started:</p>
 					<input type='text' id='timepicker-Started' />
-				</div>
+				</div> -->
 				<div>
 					<p>Deadline:</p>
 					<input type='text' id='timepicker-Deadline' />
