--- a/popup/popup.html
+++ b/popup/popup.html
@@ -17,6 +17,7 @@
 	<script src="js/popup_vue_component.js"></script>
 	<script src="air-datepicker/js/datepicker.min.js"></script>
 	<script src="air-datepicker/js/i18n/datepicker.en.js"></script>
+	<script src="js/IndexedDB.js"></script>
 
 </head>
 <body>
