--- a/popup/popup.html
+++ b/popup/popup.html
@@ -63,8 +63,9 @@
 			<!-- HEADER-ABOUT -->
 			<div id='header-about' class='header-box flex-box'>
 				<div id='header-about-left' style="width: 85%;">
-					<p class='headline-font' style="color: #1e1e1e">
-						<strong>ToDo</strong> list <i id='todoListStatus'>{{ status }}</i>
+					<p class='headline-font' >
+						<strong>ToDo</strong> list 
+						<i id='todoListStatus' v-bind:style="{backgroundColor: backgroundColor}">{{ status }}</i>
 					</p>
 				</div>
 				<div id='header-about-right' class='header-about-right flex-box' style="width: 15%;">
@@ -82,24 +83,17 @@
 			</div>
 			<!-- TODO LIST CONTNT —— INPROGRESS -->
 			<div id='todoList-container' class='todoList-container flex-box'>
-				<!-- Tabs <completed / inprogress / abandon> -->
-				<!-- <div class='todoList-container-tabs flex-box'>
-					<button
-						v-for="tab in tabs"
-						v-bind:key="tab"
-						v-bind:class="['tab-button', { active: currentTab === tab }]"
-						v-on:click="currentTab = tab"
-					>{{ tab }}</button>
-				</div> -->
 				<!-- Vue 实例 -->
 				<!-- 使用 keep-alive 来保持元素活性，避免失活 -->
 				<keep-alive>
-					<todoli
-					v-for="(index,todoli) in todoList"
-					:dbId=todoli.id
-					:key=index
-					:todoli="todoli"
-				></todoli>
+					<transition-group name="list" tag="div">
+						<todoli
+							v-for="(index,todoli) in todoList"
+							:dbId=todoli.id
+							:key=index
+							:todoli="todoli"
+						></todoli>
+					</transition-group>
 				</keep-alive>
 			</div>
 		</div>
