增加了todoItem 的编辑功能

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -176,3 +176,26 @@
 
 
 </html>
+
+
+<!-- <div id='popup-editToDoItem' class='flex-box' >
+	<div class='popup-center-content'>
+		<div>
+			<p>Deadline:</p>
+			<input type='text' id='timepicker-Deadline' />
+		</div>
+		<div>
+			<p>ToDo:</p>
+			<textarea id='todoTextarea'></textarea>
+		</div>
+		<div>
+			<p>Priority:</p>
+			<select id="selectPriority">
+				<option>low</option><option>medium</option><option>high</option>
+			</select>
+		</div>
+		<div>
+			<button id='popup-save-bt'><i class="fa fa-check icon-plus"></i>save</button>
+		</div>
+	</div>
+</div> -->
