加入了 Animate.css 使UI过度更加平滑

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -9,6 +9,7 @@
 	<link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
 	<link href="css/popup_style.css" rel="stylesheet" type="text/css" />
 	<link href="air-datepicker/css/datepicker.min.css" rel="stylesheet" type="text/css">
+	<link href="css/animate.css" rel="stylesheet" type="text/css">
 
 	<!-- JS -->
 	<script src="js/jquery.1.12.3.min.js"></script>
@@ -35,7 +36,7 @@
 			</div>
 		</div>
 		<!-- HEADER OPERATION -->
-		<div id='header-operation'>
+		<div id='header-operation' class='animated fadeIn'>
 			<!-- 通过套一个壳，以避免对下面布局的影响 -->
 			<div class='header-box flex-box' style="height:35px;">
 				<!-- 各大功能 -->
@@ -59,7 +60,7 @@
 		</div>
 
 		<!-- LIST -->
-		<div id='content-toToList'>
+		<div id='content-toToList' class='animated fadeIn'>
 			<!-- HEADER-ABOUT -->
 			<div id='header-about' class='header-box flex-box'>
 				<div id='header-about-left' style="width: 85%;">
@@ -124,7 +125,7 @@
 		</div>
 
 		<!-- EDIT -->
-		<div id='content-editToDoItem' class='flex-box' style="display:none;">
+		<div id='content-editToDoItem' class='flex-box animated fadeIn' style="display:none;">
 			<div class='center-content'>
 				<!-- 不需要用户创建开始时间，开始时间，默认为当日 -->
 				<!-- <div>
